Home page re-arranged

--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
                   Lab</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-color" href="programming.html">Programming</a>
-           </li>
-           <li class="nav-item">
-              <a class="nav-link text-color" href="achievements.html">Achievements</a>
-           </li>
+               <a class="nav-link text-color" href="programming.html">Programming</a>
+            </li>
+            <li class="nav-item">
+               <a class="nav-link text-color" href="achievements.html">Achievements</a>
+            </li>
             <li class="nav-item">
                <a class="nav-link text-color" href="education.html">Education</a>
             </li>
@@ -78,7 +78,6 @@
             <li><a class="nav-link text-color" href="gallery.html">Gallery</a></li>
          </ul>
       </div>
-
    </nav>
    <br>
 
@@ -134,42 +133,52 @@
                </div> -->
                <table id="conference-table">
                   <thead>
-                      <tr>
-                          <th>Conference</th>
-                          <th>Cycle</th>
-                          <th>Submission Deadline</th>
-                          <th>Location</th>
-                      </tr>
+                     <tr>
+                        <th>Conference</th>
+                        <th>Cycle</th>
+                        <th>Submission Deadline</th>
+                        <th>Location</th>
+                     </tr>
                   </thead>
                   <tbody id="conference-table-body">
-                      <!-- Conference data will be populated here -->
+                     <!-- Conference data will be populated here -->
                   </tbody>
-              </table>
+               </table>
             </div>
 
          </div><!--/Left Column-->
 
          <!-- Center Column -->
          <div class="col-md-6 col-xs-5">
-            <div id="carouselExampleControls" class="carousel slide border border-secondary" data-ride="carousel">
-               <div class="carousel-inner" id="carousel-container"></div>
-               
-               <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="sr-only">Previous</span>
-               </a>
-               <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="sr-only">Next</span>
-               </a>
+            <div class="card">
+               <!-- <div class="card-header">
+                 Bio
+               </div> -->
+               <div class="card-body">
+                  <p class="card-text">I am a Ph.D. candidate in Computer Science at the <strong>University of Texas at
+                        El Paso</strong>, conducting research in <strong>LLMs, Machine Learning, Deep Learning,
+                        Federated Learning,
+                        and NLP</strong> under Dr. Sajedul Talukder at <strong>SUPREME Lab</strong>. Previously, I
+                     worked as a Senior Software Engineer at <strong>Samsung R&D Institute</strong> Bangladesh,
+                     contributing to web-based tools for 4G and 5G developers in collaboration with Samsung Network
+                     Division. My expertise spans <strong>full-stack development</strong>,
+                     competitive programming (<strong>Leetcode, Codeforces, Uva, LightOJ</strong> etc.), and
+                     knowledge-sharing, including training on software engineering and clean coding. Recognized
+                     for excellence, I collaborated with Samsung’s Suwon team on projects at Digital City, Korea.</p>
+                  </p>
+               </div>
             </div>
-            <hr>
+            <br />
+            <div class="card-group", id="achievements-group">
+               <!-- achievements-images -->
+            </div>
             <h5>Publications at a glance</h5>
             <div class="list-wrapper">
                <ul class="publication-list">
-                 <!-- Dynamically inserted list items will go here -->
+                  <!-- Dynamically inserted list items will go here -->
                </ul>
-             </div>
+            </div>
+            <hr>
             <h5>Research Domain Interests</h5>
             <ul class="ul-dates">
                <li>
@@ -209,38 +218,24 @@
                </li>
             </ul>
             <hr>
-
-            <!-- <div class="card-group">
-               <div class="card">
-                  <img class="card-img-top" src="images\System-Architecture-new.png" alt="Card image cap">
-                  <div class="card-body">
-                     <p class="card-text">System flow architecture starting at data
-                        acquisitions from different sources to the machine learning
-                        model tuning and different algorithms.</p>
-                     <p class="card-text"><small class="text-muted">Last updated 1 month ago</small></p>
-                  </div>
-               </div>
-               <div class="card">
-                  <img class="card-img-top" src="images\reply-tree.png" alt="Card image cap">
-                  <div class="card-body">
-                     <p class="card-text">Comment threads for user post scores aggregation
-                        sample representation using different approaches.</p>
-                     <p class="card-text"><small class="text-muted">Last updated 1 month ago</small></p>
-                  </div>
-               </div>
-               <div class="card">
-                  <img class="card-img-top" src="images\zpk-proving-verifing-new.png" alt="Card image cap">
-                  <div class="card-body">
-                     <p class="card-text">ZKP Proof Generation and Verification Phase.</p>
-                     <p class="card-text"><small class="text-muted">Last updated 1 month ago</small></p>
-                  </div>
-               </div>
-            </div> -->
          </div>
          <div class="col-md-3 col-xs-8">
+            <div id="carouselExampleControls" class="carousel slide border border-secondary" data-ride="carousel">
+               <div class="carousel-inner" id="carousel-container"></div>
+
+               <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+               </a>
+               <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+               </a>
+            </div>
+            <br/>
             <h5>UPDATES</h5>
             <div class="overflow-auto p-3 bg-body-tertiary" style="max-height: 800px;">
-               <div class="list-group" style="font-size: 12px;"> -->
+               <div class="list-group" style="font-size: 12px;">
                </div>
             </div>
          </div>
