Update the Home Page for better visualization

--- a/index.html
+++ b/index.html
@@ -169,8 +169,12 @@
                </div>
             </div>
             <br />
-            <div class="card-group", id="achievements-group">
-               <!-- achievements-images -->
+            <div class="card">
+               <div class="card-body">
+                  <div class="card-group", id="achievements-group">
+                     <!-- achievements-images -->
+                  </div>
+               </div>
             </div>
             <h5>Publications at a glance</h5>
             <div class="list-wrapper">
