--- a/achievements.html
+++ b/achievements.html
@@ -53,44 +53,19 @@
          align-items: center;
       }
    </style>
-
+   <script src="scripts/navbar.js"></script>
 </head>
 
 <body>
    <nav class="navbar sticky-top navbar-expand-md navbar-dark" style="background: rgb(12, 1, 59);">
-      <a class="navbar-brand" href="#"><span>
-            <img src="images/utep-logo.png" /></span></a>
+      <a class="navbar-brand" href="#">
+         <span><img src="images/utep-logo.png" alt="UTEP Logo" /></span>
+      </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
          <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="collapsibleNavbar">
-         <ul class="navbar-nav">
-            <li class="nav-item">
-               <a class="nav-link" href="index.html">Home</a>
-            </li>
-            <li class="nav-item">
-               <a class="nav-link text-color" href="publication.html">Publications</a>
-            </li>
-            <li class="nav-item">
-               <a class="nav-link text-color" href="https://www.cs.utep.edu/stalukder/supremelab/index.html">Research
-                  Lab</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-color" href="programming.html">Programming</a>
-           </li>
-           <li class="nav-item">
-              <a class="nav-link text-color" href="achievements.html">Achievements</a>
-           </li>
-            <li class="nav-item">
-               <a class="nav-link text-color" href="education.html">Education</a>
-            </li>
-            <li class="nav-item">
-               <a class="nav-link text-color" href="about.html">About</a>
-            </li>
-            <li><a class="nav-link text-color" href="blog.html">Blog</a></li>
-            <li><a class="nav-link text-color" href="resources.html">Resources</a></li>
-            <li><a class="nav-link text-color" href="gallery.html">Gallery</a></li>
-         </ul>
+         <ul class="navbar-nav" id="navbar-links"></ul>
       </div>
    </nav>
    <br>
