--- a/index.html
+++ b/index.html
@@ -37,13 +37,14 @@
 
    <link rel="stylesheet" href="style/conferences.css">
    <link rel="stylesheet" href="style/index.css">
-
+   
+   <script src="scripts/navbar.js"></script>
    <script src="scripts/index.js"></script>
    <script src="scripts/conferences.js"></script>
 </head>
 
 <body>
-   <nav class="navbar sticky-top navbar-expand-md navbar-dark" style="background: rgb(12, 1, 59);">
+   <!-- <nav class="navbar sticky-top navbar-expand-md navbar-dark" style="background: rgb(12, 1, 59);">
       <a class="navbar-brand" href="#"><span>
             <img src="images/utep-logo.png" /></span></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -78,7 +79,20 @@
             <li><a class="nav-link text-color" href="gallery.html">Gallery</a></li>
          </ul>
       </div>
+   </nav> -->
+   
+   <nav class="navbar sticky-top navbar-expand-md navbar-dark" style="background: rgb(12, 1, 59);">
+      <a class="navbar-brand" href="#">
+         <span><img src="images/utep-logo.png" alt="UTEP Logo" /></span>
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+         <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="collapsibleNavbar">
+         <ul class="navbar-nav" id="navbar-links"></ul>
+      </div>
    </nav>
+
    <br>
 
    <div class="container-fluid">
