--- a/achievements.html
+++ b/achievements.html
@@ -33,6 +33,7 @@
    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.slim.min.js"></script>
    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
    <style>
       #more {
@@ -65,7 +66,7 @@
          <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="collapsibleNavbar">
-         <ul class="navbar-nav" id="navbar-links"></ul>
+         <ul class="navbar-nav ml-auto" id="navbar-links"></ul>
       </div>
    </nav>
    <br>
