--- a/index.html
+++ b/index.html
@@ -34,9 +34,12 @@
    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
    <!-- <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet"> -->
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+
 
    <link rel="stylesheet" href="style/conferences.css">
    <link rel="stylesheet" href="style/index.css">
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
    
    <script src="scripts/navbar.js"></script>
    <script src="scripts/index.js"></script>
@@ -51,7 +54,7 @@
          <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="collapsibleNavbar">
-         <ul class="navbar-nav">
+         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
                <a class="nav-link" href="index.html">Home</a>
             </li>
@@ -89,7 +92,7 @@
          <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="collapsibleNavbar">
-         <ul class="navbar-nav" id="navbar-links"></ul>
+         <ul class="navbar-nav ml-auto" id="navbar-links"></ul>
       </div>
    </nav>
 
