--- a/publication.html
+++ b/publication.html
@@ -37,6 +37,7 @@
       <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.slim.min.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
   <style>
     #more {
@@ -63,46 +64,22 @@
       aspect-ratio: 16/9;
     }
   </style>
+  <script src="scripts/navbar.js"></script>
 </head>
 
 <body>
-  <!-- Navigation -->
-  <nav class="navbar sticky-top navbar-expand-md navbar-dark" style="background: rgb(12, 1, 59);">
-    <a class="navbar-brand" href="#"><span>
-          <img src="images/utep-logo.png" /></span></a>
+   <!-- Navigation -->
+   <nav class="navbar sticky-top navbar-expand-md navbar-dark" style="background: rgb(12, 1, 59);">
+    <a class="navbar-brand" href="#">
+       <span><img src="images/utep-logo.png" alt="UTEP Logo" /></span>
+    </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
        <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-           <a class="nav-link" href="index.html">Home</a>
-        </li>
-        <li class="nav-item">
-           <a class="nav-link text-color" href="publication.html">Publications</a>
-        </li>
-        <li class="nav-item">
-           <a class="nav-link text-color" href="https://www.cs.utep.edu/stalukder/supremelab/index.html">Research
-              Lab</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-color" href="programming.html">Programming</a>
-       </li>
-       <li class="nav-item">
-          <a class="nav-link text-color" href="achievements.html">Achievements</a>
-       </li>
-        <li class="nav-item">
-           <a class="nav-link text-color" href="education.html">Education</a>
-        </li>
-        <li class="nav-item">
-           <a class="nav-link text-color" href="about.html">About</a>
-        </li>
-        <li><a class="nav-link text-color" href="blog.html">Blog</a></li>
-        <li><a class="nav-link text-color" href="resources.html">Resources</a></li>
-        <li><a class="nav-link text-color" href="gallery.html">Gallery</a></li>
-     </ul>
+       <ul class="navbar-nav ml-auto" id="navbar-links"></ul>
     </div>
- </nav>
+    </nav>
   <br>
   <div class="container-fluid">
     <div class="row">
