conferences table css has been changed

--- a/index.html
+++ b/index.html
@@ -36,11 +36,10 @@
    <!-- <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet"> -->
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
-
+   
    <link rel="stylesheet" href="style/conferences.css">
    <link rel="stylesheet" href="style/index.css">
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-   
+
    <script src="scripts/navbar.js"></script>
    <script src="scripts/index.js"></script>
    <script src="scripts/conferences.js"></script>
@@ -148,13 +147,13 @@
                   <p class="card-text">“By far, the greatest danger of Artificial Intelligence is that people conclude
                      too early that they understand it." – Eliezer Yudkowsky</p>
                </div> -->
-               <table id="conference-table">
+               <table class="table table-sm" id="conference-table">
                   <thead>
                      <tr>
-                        <th>Conference</th>
-                        <th>Cycle</th>
-                        <th>Submission Deadline</th>
-                        <th>Location</th>
+                        <th scope="col">Conference</th>
+                        <th scope="col">Cycle</th>
+                        <th scope="col">Submission Deadline</th>
+                        <th scope="col">Location</th>
                      </tr>
                   </thead>
                   <tbody id="conference-table-body">
