Add new js file for updates information

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
    <script src="scripts/navbar.js"></script>
    <script src="scripts/index.js"></script>
    <script src="scripts/conferences.js"></script>
+   <script src="scripts/updates.js"></script>
 </head>
 
 <body>
