updated the portfolio

--- a/about.html
+++ b/about.html
@@ -124,7 +124,7 @@
          <div class="col" style="font-size: 12px;">
             <!-- Alert -->
             <div class="alert alert-success alert-dismissible" role="alert">
-               <h2>Bio</h2>
+               <h4><i class="bi bi-person-circle me-2"></i>Bio</h4>
             </div>
 
             <!-- Articles -->
@@ -159,42 +159,14 @@
                with the Suwon team on diverse projects at Samsung Digital City in Suwon, Korea.
             </div>
             <hr>
-            <h5>Professional Experience</h5>
+            <h4><i class="bi bi-briefcase-fill me-2"></i>Professional Experience</h4>
             <div class="card">
                <div class="card-body">
                   <ul class="ul-dates">
                      <li>
                         <div class="d-flex justify-content-between">
                            <div class="content">
-                              <b>Teaching Assistant</b>
-                              <div><i>January 2024 – Present</i>
-                              </div>
-                              <div><i>School of Computing</i>
-                              </div>
-                              <div>
-                                 <ul>
-                                    <li>Preparing lecture notes/slides on a given topic</li>
-                                    <li>Conducting classes of "Design and Analysis of Algorithms" and "Learning from Data"</li>
-                                    <li>Mentoring both Undergrad and Grad students</li>
-                                    <li>Grading Quizzes, Assignments, Exams, Projects and Presentation</li>
-                                 </ul>                         
-                              </div>
-                           </div>
-                           <div><img src="images/siu-cs-logo.png" width="200" height="50" /></div>
-                        </div>
-                        
-                     </li>
-                  </ul>
-               </div>
-            </div>
-            <br/>
-            <div class="card">
-               <div class="card-body">
-                  <ul class="ul-dates">
-                     <li>
-                        <div class="d-flex justify-content-between">
-                           <div class="content">
-                              <b>Research Assistant</b><br>
+                              <h5><i class="bi bi-journal-text me-1"></i>Research Assistant</h5>
                               <div><i>August 2022 – Present</i>
                               </div>
                               <div><i>SUPREME Lab.</i>
@@ -226,7 +198,35 @@
                      <li>
                         <div class="d-flex justify-content-between">
                            <div class="content">
-                              <b>Sr. Software Engineer</b><br><span class="duration"></span>
+                              <h5><i class="bi bi-easel me-1"></i> Teaching Assistant</h5>
+                              <div><i>January 2024 – May 2024</i>
+                              </div>
+                              <div><i>School of Computing</i>
+                              </div>
+                              <div>
+                                 <ul>
+                                    <li>Preparing lecture notes/slides on a given topic</li>
+                                    <li>Conducting classes of "Design and Analysis of Algorithms" and "Learning from Data"</li>
+                                    <li>Mentoring both Undergrad and Grad students</li>
+                                    <li>Grading Quizzes, Assignments, Exams, Projects and Presentation</li>
+                                 </ul>                         
+                              </div>
+                           </div>
+                           <div><img src="images/siu-cs-logo.png" width="200" height="50" /></div>
+                        </div>
+                        
+                     </li>
+                  </ul>
+               </div>
+            </div>
+            <br/>
+            <div class="card">
+               <div class="card-body">
+                  <ul class="ul-dates">
+                     <li>
+                        <div class="d-flex justify-content-between">
+                           <div class="content">
+                              <h5><i class="bi bi-laptop me-1"></i>Sr. Software Engineer</h5>
                               <div><i>February 2019 – August 2022</i>
                               </div>
                               <div><i>Samsung R&D Institute Bangladesh</i>
@@ -256,14 +256,14 @@
                </div>
             </div>
             <hr>
-            <h5>Programming Skill</h5>
+            <h4><i class="bi bi-terminal me-2"></i>Programming Skill</h4>
             <div class="card">
                <div class="card-body">
                   <ul class="ul-dates">
                      <li>
                            <div class="d-flex justify-content-between">
                               <div class="content">
-                                 <b>Competitive Programmer</b><br><span class="duration"></span>
+                                 <h5><i class="bi bi-braces me-2"></i>Competitive Programmer</h5>
                                  <div>
                                     <ul>
                                        <li>Solved 1000+ problems in different Online Judge (i.e. Leetcode, Codeforces, Uva,
