--- a/index.html
+++ b/index.html
@@ -186,17 +186,24 @@
                </div>
             </div>
             <br />
-            <div class="card">
+            <!-- <div class="card">
                <div class="card-body">
                   <div class="card-group", id="achievements-group">
                   </div>
                </div>
-            </div>
-            <h5>Publications at a glance</h5>
-            <div class="list-wrapper">
-               <ul class="publication-list">
-                  <!-- Dynamically inserted list items will go here -->
-               </ul>
+            </div> -->
+             <!-- Uploaded Image -->
+            <!-- <div class="text-center">
+               <img src="your-image.png" alt="Publications Snapshot" class="img-fluid rounded image-banner">
+            </div> -->
+
+            <div class="container">
+               <h2 class="mb-3 text-center"><i class="bi bi-journal-bookmark-fill me-2"></i>Publications at a Glance</h2>
+
+               <!-- Scrollable container -->
+               <div class="scroll-box">
+                  <div class="list-wrapper"></div>
+               </div>
             </div>
             <hr>
             <h5>Research Domain Interests</h5>
