portfolio is updated

--- a/index.html
+++ b/index.html
@@ -210,36 +210,29 @@
             <ul class="ul-dates">
                <li>
                   <div class="content">
-                     <b>Social Networks</b><br><span class="duration"></span>
-                     <div><i>"AI and machine learning can significantly enhance the user experience within social
-                           networks.
-                           Given our daily reliance on various social platforms, user-generated posts, comments, and
-                           reactions
-                           serve as valuable resources for research purposes. Investigating social networks can lead to
-                           innovative
-                           insights into user data security and privacy, ultimately delivering novel user
-                           experiences."</i>
+                     <b>Healthcare AI & Medical Imaging</b><br><span class="duration"></span>
+                     <div><i>My research in healthcare AI focuses on advancing medical imaging and predictive analytics for improved clinical outcomes. I have worked on developing active learning frameworks, AutoML systems, and data-driven approaches that enhance image interpretation and diagnostic accuracy. Beyond imaging, my contributions extend to disease prediction, such as childhood and pregnancy lead poisoning and diabetic retinopathy, where deep learning models provide early detection and decision support. I have also explored conversational AI, designing personalized healthcare chatbots powered by federated learning and GPT-based architectures to improve accessibility and patient engagement in clinical contexts.</i>
                      </div>
                   </div>
                </li>
                <li>
                   <div class="content">
-                     <b>Health Care</b><br><span class="duration"></span>
-                     <div><i>"AI has the ability to analyze big data sets – pulling together patient insights and
-                           leading to predictive analysis. Quickly obtaining patient insights helps the healthcare
-                           ecosystem discover key
-                           areas of patient care that require improvement. Wearable healthcare technology also uses
-                           AI to better serve patients."</i>
+                     <b>Federated Learning & Privacy-Preserving Machine Learning</b><br><span class="duration"></span>
+                     <div><i>A central theme of my work is federated learning (FL) and privacy-aware distributed AI. I have designed collaborative FL frameworks that integrate differential privacy to protect sensitive medical data, as well as hierarchical and clustered FL strategies (e.g., SCALE, SAFARI) to improve scalability in heterogeneous environments. My research also applies FL in practical security contexts, such as contraband detection from airport baggage X-rays, demonstrating the value of decentralized intelligence in real-world high-stakes applications. Additionally, I have investigated the integration of blockchain and generative AI with FL to ensure transparency, trust, and adaptability in privacy-critical domains.</i>
                      </div>
                   </div>
                </li>
                <li>
                   <div class="content">
-                     <b>Security Enhancements</b><br><span class="duration"></span>
-                     <div><i>"AI uses machine learning and deep learning to recognize patterns on the network and
-                           cluster them, it will then detect deviations or security incidents from the norm before
-                           responding to them. These patterns can help to improve security in the future. Similar
-                           potential threats can be detected and blocked early enough."</i>
+                     <b>Social Media, NLP & Generative AI</b><br><span class="duration"></span>
+                     <div><i>I actively explore natural language processing and generative AI to better understand and safeguard online social environments. My work includes tracking sentiment dynamics, detecting emotions, and building datasets for low-resource languages like Bangla to advance emotion and hate-speech detection. I have addressed identity deception and gender identification in online spaces, proposing solutions to enhance integrity in social networks. At the same time, I leverage LLMs (GPT-4, RAG, multimodal summarization, empathetic AI) for applications such as content filtering, personalized recommendations, and predictive modeling of user evolution. Together, these contributions aim to balance personalization, safety, and fairness in digital platforms.</i>
+                     </div>
+                  </div>
+               </li>
+               <li>
+                  <div class="content">
+                     <b>Cybersecurity & Quantum AI for Nuclear Systems</b><br><span class="duration"></span>
+                     <div><i>A growing strand of my research applies AI to critical infrastructure security, particularly nuclear power plants. I have contributed to frameworks that integrate quantum cryptography, quantum-inspired federated learning, and large language models to enhance resilience against cyber threats such as DDoS attacks and anomaly intrusions. These works emphasize privacy-aware detection, predictive maintenance using digital twins, and contextually informed monitoring for safe operations. By combining cybersecurity, AI, and quantum technologies, my research advances the development of proactive, intelligent defense mechanisms for next-generation energy systems where reliability and safety are paramount.</i>
                      </div>
                   </div>
                </li>
